--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -35,6 +35,14 @@ h3 {
     
     .header-link {
         line-height: 50px;
+        
+        a {
+            background-color: transparent;
+        }
+        
+        a:hover {
+            background-color: transparent;
+        }
     }
     
     .footer ul, .footer a {
@@ -51,10 +59,10 @@ h3 {
     }
     
     .image {
-        -moz-border-top-right-radius: 20px;
-        -moz-border-bottom-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 20px;
+        -moz-border-top-right-radius: 10px;
+        -moz-border-bottom-left-radius: 10px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 10px;
     }
     
     .container {
@@ -66,17 +74,22 @@ h3 {
     }
     
     .header-link a, .header-link span {
-        color: #d8eecf;    
+        color: #d8eecf;
+        background-color: transparent;
     }
     
     .header-link a:hover {
         color: #ffffff;
     }
+        
+    .header-link .nav-pills .active a {
+        color: #ffffff;        
+    }
     
     .shadow {
-        -moz-box-shadow: 2px 2px 4px #000000;
-        -webkit-box-shadow: 2px 2px 4px #000000;
-        box-shadow: 2px 2px 4px #000000;
+        -moz-box-shadow: 1px 4px 4px #000000;
+        -webkit-box-shadow: 1px 4px 4px #000000;
+        box-shadow: 1px 4px 4px #000000;
     }
     
     .den {
@@ -116,6 +129,63 @@ h3 {
                 position: absolute;
                 bottom: 0px;
                 background-image: url('/styles/images/BGPages_BottomBit.png');   
+            }
+        }
+        
+        .in-page {
+            .nav {
+                height: 30px;
+            }
+            
+            .nav-pills {
+                a {
+                    color: #171124;
+                    background-color: transparent;
+                }
+            
+                a:hover {
+                    background-color: transparent;
+                    border-bottom: 2px solid;
+                    border-bottom-style: dashed;
+                    border-bottom-color: #d8eecf;   
+                }
+            
+                .active a {
+                    color: #979983;
+                    background-color: transparent;
+                }
+            }
+                
+            .default-common-room-bg {
+                display: inline-block;
+                width: 730px;
+                height: 60px;
+                background-color: #d8eecf;
+            }
+            
+            .default-common-room-bg .banner-text {
+                font-size: 25px;
+                color: #87c36f;
+                padding: 23px 20px 0px 0px;
+            }
+        }
+        
+        .footer {
+            ul, a {
+                color: #979983;
+                font-size: 12px;
+            }
+            
+            li {
+                display: inline-block;
+            }
+            
+            .footer-links {
+                width: 765px;
+            }
+            
+            .footer-links li {
+                padding: 0px 10px 0px 0px;
             }
         }
     }
