A few more Den UI changes

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -155,7 +155,11 @@ h3 {
                     background-color: transparent;
                 }
             }
-                
+            
+            .btn-link {
+                padding: 0px 0px 10px 0px;
+            }
+            
             .default-common-room-bg {
                 display: inline-block;
                 width: 730px;
