--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -6720,7 +6720,7 @@ h3 {
 }
 
 .scribden .header-link .nav-pills .active a {
-    color: #ffffff;   
+    color: #ffffff;
 }
 
 .scribden .shadow {
@@ -6730,7 +6730,7 @@ h3 {
 }
 
 .scribden .den .in-page .nav {
-    height: 30px;    
+    height: 30px;
 }
 
 .scribden .den .in-page .nav-pills a {
@@ -6769,4 +6769,25 @@ h3 {
     font-size: 25px;
     color: #87c36f;
     padding: 23px 20px 0px 0px;
+}
+
+.scribden .den .in-page .bottom-spacing {
+    padding: 0px 0px 10px 0px;
+}
+
+
+
+.scribden .den .bg-pages {
+    z-index: 0;
+}
+
+.scribden .den .body .header-link {
+    position: absolute;
+    z-index: 100;
+}
+
+.scribden .den .in-page .ribbon {
+    position: absolute;
+    left: -135px;
+    top: 37px;
 }
