--- a/app_retro/views/den/den.html
+++ b/app_retro/views/den/den.html
@@ -1,7 +1,7 @@
 <div class="center hero-unit den" ng-controller="DenCtrl">
     <div class="header">
         <div class="left">
-            <h2>{{ username }}'s Den</h2>
+            <h2>{{ user.username }}'s Den</h2>
         </div>
         <div class="header-link right">
             <a href="#/den">Profile</a><span> | </span><a href="#/logout">Logout</a>
