--- a/app_retro/views/header/header.html
+++ b/app_retro/views/header/header.html
@@ -1,16 +1,14 @@
-<div ng-controller="HeaderCtrl">
-    <div ng-if="Authorization.isSignedIn()" class="navbar">
-        <div class="navbar-inner">
-            <a href="" class="btn btn-danger" ng-click="signOut()">Sign out</a>
+<div class="header">
+    <div class="left">
+        <h2>ScribDen</h2>
+    </div>
+    <div class="header-link right">
+        <div ng-show="Authorization.isSignedIn()">
+            <a href="#/">Profile</a><span> | </span><a href="#/logout">Logout</a>
+        </div>
+        <div ng-show="!Authorization.isSignedIn()">
+            <a href="#/login">Login</a>
         </div>
     </div>
-    
-    <div ng-if="!Authorization.isSignedIn()" class="navbar">
-        <div class="navbar-inner">
-            <ul class="nav">
-                <li><a href="/signin">Sign in</a></li>
-                <li><a href="/signup">Sign up</a></li>
-            </ul>
-        </div>
-    </div>
+    <div class="clear"></div>
 </div>
