--- a/app_retro/views/den/den.html
+++ b/app_retro/views/den/den.html
@@ -33,8 +33,8 @@
                                 <br />
                                 <div class="content" ng-bind-html="conversation.Content"></div>                                
                             </td>
-                            <td class="conversation-detail" style="width: 5%">
-                                <a class="c-arrow" href="#/conversation/{{ conversation.ConversationKey }}"><h1>></h1></a>
+                            <td class="conversation-detail" style="width: 5%" ng-click="getDetail({{ conversation.ConversationKey }})">
+                                <h1>></h1>
                             </td>
                         </tr>
                     </tbody>
