--- a/app_retro/views/login/register.html
+++ b/app_retro/views/login/register.html
@@ -4,6 +4,7 @@
     <h2>What's your name?</h2>
     <form id="updateForm" name="updateForm" ng-submit="update()">
         <span ng-show="alert" class="error">Username is taken.</span>
+        <span ng-show="invalid" class="error">Username must be 1-32 alphanumeric characters.</span>
         <br />
         <input type="text" id="username" name="username" ng-model="form.username" />
         <br />
