--- a/app_retro/views/login/login.html
+++ b/app_retro/views/login/login.html
@@ -1,6 +1,8 @@
 <div class="center hero-unit" ng-controller="LoginCtrl">
     <h1>ScribDen</h1>
     <form id="loginForm" name="loginForm" ng-submit="login()">
+        <span ng-show="alert" class="error">Email is in an invalid format.</span>
+        <br />
         <span>Email:</span>
         <input type="text" id="email" name="email" ng-model="form.email" />
         <input type="hidden" id="password" name="password" ng-model="form.password" />
